# ixidb

./: .envrc  .gitignore  CMakeLists.txt  justfile  vcpkg.json
.github/workflows/: build.yml
ixidb/: CMakeLists.txt
ixidb/include/libixidb/: libixidb.hpp
ixidb/ixidb/: CMakeLists.txt
ixidb/src/: CMakeLists.txt  libixidb.cpp
ixidb/test/: CMakeLists.txt
ixidb/tools/: CMakeLists.txt  ixidb.cpp
lib/: CMakeLists.txt
lib/src/: libixidb.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
tools/: CMakeLists.txt
